--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,15 +6,17 @@
 
 <hr>
 <h1>Comments</h1>
-
-<% if @post.comments.any? %>
-  <%= render partial: 'comment', collection: @post.comments, as: 'comment' %>
-<% else %>
-  <p>No comments now</p>
-<% end %>
+<div class="proposal_comments">
+  <% if @post.comments.any? %>
+    <%= render partial: 'comment', collection: @post.comments, as: 'comment' %>
+  <% else %>
+    <p>No comments now</p>
+  <% end %>
+</div>
 
 <h3>Add comments</h3>
-<%= form_for @comment, url: event_post_comments_path(@event, @post), method: :post do |f| %>
+
+<%= form_for @comment, url: event_post_comments_path(@event, @post),remote: true, method: :post do |f| %>
   <%= f.hidden_field :post_id, value: @post.id %>
   <%= f.text_area :body %><br>
   <%= f.submit %>
