add flash partial

--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,1 +1,3 @@
 $('.proposal_comments').append("<%= j (render partial: 'new_comment', collection: @post.comments, as: 'comment') %>");
+$('#comment_body').val('');
+$('html, body').scrollTop( $(document).height() );
