--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,6 +18,6 @@
 
 <%= form_for @comment, url: event_post_comments_path(@event, @post),remote: true, method: :post do |f| %>
   <%= f.hidden_field :post_id, value: @post.id %>
-  <%= f.text_area :body %><br>
+  <%= f.text_area :body, required: true %><br>
   <%= f.submit %>
 <% end %>
