--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -6,7 +6,7 @@
 
   <div class="form-group">
     <%= f.label :body %>
-    <%= f.text_area :body , class: 'form-control' %>
+    <%= f.text_area :body , class: 'form-control','data-provide': "markdown" %>
   </div>
 
   <div class="form-group">
