--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,6 +7,7 @@
       <td>ID</td>
       <td>Title</td>
       <td>Proposal</td>
+      <td>Date</td>
       <td></td>
     </tr>
   </thead>
@@ -17,6 +18,7 @@
           <td><%= event.id %></td>
           <td><%= link_to event.title, event_path(event) %></td>
           <td><%= event.posts.count %></td>
+          <td><%= event.start_date %> ~ <%= event.end_date %></td>
           <td><%= link_to 'Edit', edit_event_path(event), class: 'btn btn-primary' %>
               <%= link_to 'Delete', event_path(event),method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger' %>
               <%= link_to 'Add Proposal', new_event_post_path(event), class: 'btn btn-default' %>    
