--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,7 @@
 <h1><%= @event.title %></h1>
+<hr>
 <h2>Description</h2>
-<p><%= @event.body %></p>
+<p><%= sanitize markdown @event.body %></p>
 <h2>Date</h2>
 <p><%= @event.start_date%> ~ <%= @event.end_date %></p>
 <hr>
