--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -7,7 +7,7 @@
   
   <div class="form-group">
     <%= f.label :body %>
-    <%= f.text_area :body, class: 'form-control' %>
+    <%= f.text_area :body, class: 'form-control','data-provide': "markdown" %>
   </div>
 
   <%= f.submit 'Save', class: 'btn btn-primary' %>
