--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,6 +6,7 @@
         <td>ID</td>
         <td>Title</td>
         <td>content</td>
+        <td></td>
       </tr>
     </thead>
 
@@ -15,6 +16,10 @@
           <td><%= post.id %></td>
           <td><%= link_to post.title, event_post_path(@event, post) %></td>
           <td><%= truncate post.body %></td>
+          <td>
+            <%= link_to 'Edit', edit_event_post_path(@event, post), class: 'btn btn-primary'%>
+            <%= link_to 'Delete', event_post_path(@event, post), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger' %>
+          </td>
         </tr>
       <% end %>
     </tbody>
