--- a/app/views/shared/_admin_nav.html.erb
+++ b/app/views/shared/_admin_nav.html.erb
@@ -8,14 +8,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#">Admin</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active">
-          <%= link_to 'Event', events_path %>
+          <%= link_to 'Event', admin_events_path %>
         </li>
         <li><a href="#">Link</a></li>
         <li class="dropdown">
@@ -42,7 +42,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><%= link_to 'Admin Board',admin_events_path %></li>
+                <li><%= link_to 'Back to index',root_path %></li>
                 <li class="divider"></li>
                 <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
               <% else %>
