--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -7,7 +7,7 @@
 <hr>
 
 <p><%= link_to 'Add proposal', new_event_post_path(@event) %></p>
-<p><%= link_to 'Check all proposal', event_posts_path(@event) %></p>
+<p><%= link_to 'Manage all proposal', admin_event_posts_path(@event) %></p>
 
 
 
