--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@event, @post], html: {role: 'form'} do |f| %>
+<%= form_for [@event, @post], url: { action: 'update'}, html: {role: 'form'} do |f| %>
   <div class="form-group">
     <%= f.label :title %>
     <%= f.text_field :title, class: 'form-control' %>
