--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,4 +1,4 @@
-<span class="post_title">Proposal</span>[<%= link_to 'Edit', edit_event_post_path(@event, @post) %>]
+<span class="post_title">Proposal</span>[<%= link_to 'Edit', edit_admin_event_post_path(@event, @post) %>]
 <hr>
 <h2>Title</h2>
 <p><%= @post.title %></p>
