--- a/app/views/shared/_admin_nav.html.erb
+++ b/app/views/shared/_admin_nav.html.erb
@@ -17,6 +17,9 @@
         <li class="active">
           <%= link_to 'Event', admin_events_path %>
         </li>
+        <li>
+          <%= link_to 'Proposal', all_posts_admin_posts_path %>
+        </li>
         <li><a href="#">Link</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
