--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
-<span class="post_title">Proposal</span>[<%= link_to 'Edit', edit_event_post_path(@event, @post) %>]
+<span class="post_title">Proposal</span>
 <hr>
 <h2>Title</h2>
-<p><%= @post.title %></p>
+<p><%= @post.title %>[<%= link_to 'Edit', edit_event_post_path(@event, @post) %>]</p>
 <h2>Content</h2>
 <p><%= sanitize markdown @post.body %></p>
 
