--- a/app/views/admin/posts/_comment.html.erb
+++ b/app/views/admin/posts/_comment.html.erb
@@ -1,3 +1,4 @@
+<%= check_box_tag 'comment_ids[]', comment.id %>
 <div class="panel panel-info comments">
   <div class="panel-heading">
     <p><%= comment.user.email %></p>  
@@ -8,5 +9,6 @@
   </div>
   
 </div>
+
 
 
