add sort function in event page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,10 +4,10 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <td>ID</td>
-      <td>Title</td>
-      <td>Proposal</td>
-      <td>Date</td>
+      <td>ID<%= sort "ID" %></td>
+      <td>Title<%= sort "title" %></td>
+      <td>Proposal<%= sort "posts"%></td>
+      <td>Date<%= sort "start_date" %></td>
       <td></td>
     </tr>
   </thead>
