--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <div class="container">
       <%= render partial: 'shared/flash' %>
       <%= yield %>
+      <%= params.inspect %>
     </div>
   </body>
 </html>
